--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>About Me</h1>
+    <p>About
+This is a simple 'About Me' page created using only html, it include basic information about my self, my skills, and interests.</p>
     <h2>Aman kumar</h2>
     <img src="aman.jpg" alt="AMAN KUMAR" width="300"
     <br>
@@ -167,3 +169,4 @@
 
 </body>
 </html>
+
