--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>About
-This is a simple 'About Me' page created using only html, it include basic information about my self, my skills, and interests.</p>
+    <p>This is my first web development project created using only HTML. It showcases my personal information, education, and skills.</p>
     <h2>Aman kumar</h2>
     <img src="aman.jpg" alt="AMAN KUMAR" width="300"
     <br>
@@ -169,4 +168,5 @@ This is a simple 'About Me' page created using only html, it include basic infor
 
 </body>
 </html>
+
 
