Enhance index.html with CSS and semantic corrections
Added a stylesheet link and corrected HTML structure for better semantics and accessibility.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Aman kumar</title>
@@ -15,7 +16,7 @@
     <MAIN>
         <ul>
             <li><STRONG>B.tech in computer science (AIML)</STRONG></li>
-        </ul>
+        </ul>https://github.com/Amankumar2k006/About-Me/edit/main/index.html#L166C47
     </MAIN>
 
     <H3><p><i>College</i></p></H3>
@@ -168,5 +169,6 @@
 
 </body>
 </html>
+
 
 
