Fix HTML structure and add script tag

--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
         </UL>
     </OL>
     <p align="center">Created by Aman Kumar</p>
+                <script src="script.js"></script>
 
 
 </body>
 </html>
+
 
 
 
