Enhance HTML with CSS and JavaScript integration
This update enhances the HTML document with improved CSS and JavaScript integration, providing better styling and interactivity. The content has been refined to better showcase personal information, education, and skills.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>This is my first web development project created using only HTML. It showcases my personal information, education, and skills.</p>
+    <p>
+This is my first web development project created using HTML, now enhanced with CSS and JavaScript.
+It showcases my personal information, education, and skills with improved styling and interactivity.
+</p>
     <h2>Aman kumar</h2>
     <img src="aman.jpg" alt="AMAN KUMAR" width="300"
     <br>
@@ -16,7 +19,7 @@
     <MAIN>
         <ul>
             <li><STRONG>B.tech in computer science (AIML)</STRONG></li>
-        </ul>https://github.com/Amankumar2k006/About-Me/edit/main/index.html#L166C47
+        </ul>
     </MAIN>
 
     <H3><p><i>College</i></p></H3>
@@ -170,6 +173,7 @@
 
 </body>
 </html>
+
 
 
 
