Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>About Me</h1>
+    <div class="scroll-text"></div>
     <p>
 This is my first web development project created using HTML, now enhanced with CSS and JavaScript.
 It showcases my personal information, education, and skills with improved styling and interactivity.
@@ -168,11 +169,12 @@ It showcases my personal information, education, and skills with improved stylin
         </UL>
     </OL>
     <p align="center">Created by Aman Kumar</p>
-                <script src="script.js"></script>
+     <script src="script.js"></script>
 
 
 </body>
 </html>
+
 
 
 
